test/link/ldh-bad.asm
SECTION "bad", ROM0
	ldh [$1234+@], a
